--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   cloud_firestore: ^5.6.6
+  drop_down_search_field: ^1.1.2+2
 
 dev_dependencies:
   flutter_test:
